# DCT-Page

./: .gitignore  CLAUDE.md  README.md  analyze_niah_page_ranks.py  analyze_proxy_oracle_page_scores.py  analyze_selection_oracle_overlap.py  compare_baseline_dct.py  compare_proxy_overlap_ruler.py  compare_ruler_runs.py  config.py  dct_page_attention.py  dct_page_attention_copy.py  dct_page_attention_copy_copy.py  dct_page_attention_copy_old.py  eval_aime25.py  eval_gpqa.py  eval_longbench.py  eval_longbench_v1.py  eval_longbench_v1_copy.py  eval_longbench_v2.py  eval_ruler.py  eval_ruler_m.py  profile_assemble_ncu.py  profile_decode.py  profile_decode_cache.py  profile_decode_cache_copy.py  requirements.txt  run_eval.sh  run_eval_ruler.sh  run_eval_ruler_multipole.sh  run_eval_ruler_seer.sh  run_longbench.sh  run_longbench_continuous_rope.sh  run_longbench_continuous_rope_copy.sh  run_longbench_v1.sh  run_longbench_v1_copy.sh  run_longbench_v1_duo.sh  run_longbench_v1_infllm.sh  run_longbench_v1_llama.sh  run_longbench_v1_multipole.sh  (+37 more)
archived/: old_dct_page_attention.py  old_eval_longbench_v1.py  profile_assemble_ncu.py  profile_assemble_nsys.py  profile_qrope_nsys.py
baselines/quest_attn/ops/: CMakeLists.txt
baselines/quest_attn/ops/cmake/: fetch_rapids.cmake
eval_ruler/: requirements.txt  run_dctpage.sh  run_dctpage_copy.sh
multipole_attn/: __init__.py  attention_forward.py  clustering.py  config.py  kernel_wrappers.py
observations/: dct_page_energy.py
old_tests/: eval.py  page_selection_compare_ratio.py  rope_gap_attention.py  run_longbench_rope_gap.sh
oracle/: attention_mass_recall_ruler.py  attention_mass_recall_ruler_quest.py  compare_overlap_ruler.py  compare_proxy_oracle_slices.py  dc_ac_ruler.py  diagnose_l2_scoring.py  diagnose_l2_scoring_codex.py  diagnose_scoring_methods.py  eval_ruler_dc_ac.py  eval_ruler_hybridmulti.py  hybridmulti_ruler.py  oracle_hybrid_ruler.py  oracle_ruler.py  run_ruler_eval.py  run_ruler_eval_oracle_hybrid.py  run_ruler_oracle_selection.py
results_longbench/: llama_baseline.jsonl  llama_page_attn_0.03_topk32_max_max_compressed_continuous_rope.jsonl  llama_page_attn_0.03_topk32_max_max_drop_continuous_rope.jsonl  llama_page_attn_0.03_topk32_max_mean_compressed_continuous_rope.jsonl  llama_page_attn_0.03_topk32_max_mean_drop_continuous_rope.jsonl  llama_page_attn_0.03_topk32_max_topp_compressed_continuous_rope.jsonl  llama_page_attn_0.03_topk32_max_topp_drop_continuous_rope.jsonl  llama_page_attn_0.03_topk32_mean_max_compressed_continuous_rope.jsonl  llama_page_attn_0.03_topk32_mean_max_drop_continuous_rope.jsonl  llama_page_attn_0.03_topk32_mean_mean_drop_continuous_rope.jsonl  (+13 more)
(+249 files in other folders)
